--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,48 @@
 body
 {
     background: rgba(0,0,0,0.7);
+    font-family: 'Open Sans', sans-serif;
+    color: whitesmoke;
+}
+h1
+{
+    text-align: center;
+    font-size: 50px;
+    font-weight: bolder;
+    margin-bottom: 5%;
+}
+h2
+{
+    font-family: 'Nunito','Open Sans', sans-serif;
+    font-size: 40px;
+    font-weight: 800;
+    text-align: center;
+    margin: 2% 0 0 0%;
+    letter-spacing: 1px;
+}
+h3,p
+{
+    font-family: 'Open Sans', sans-serif;
+    letter-spacing: 1px;
+    text-align: center;
+}
+p
+{
+    font-size: large;
+    font-weight: bolder;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    color: black;
+    left: 0;
+    padding: 1rem;
+    background-color: whitesmoke;
+}
+img
+{
+    display: block;
+    margin: 0 auto;
+    margin-top: 5%;
+    width: 100px;
+    height: 100px;
 }
