--- a/assets/style.css
+++ b/assets/style.css
@@ -33,10 +33,9 @@ p
     position: absolute;
     right: 0;
     bottom: 0;
-    color: black;
+    color: whitesmoke;
     left: 0;
     padding: 1rem;
-    background-color: whitesmoke;
 }
 img
 {
