--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,7 @@ h1
     font-weight: bolder;
     margin-bottom: 5%;
 }
-h2
+h2,.weather-desc,.wind-speed
 {
     font-family: 'Nunito','Open Sans', sans-serif;
     font-size: 40px;
@@ -47,7 +47,7 @@ img
 {
     display: block;
     margin: 0 auto;
-    margin-top: 5%;
+    margin-top: 1%;
     width: 150px;
     height: 150px;
 }
